[gd_scene load_steps=56 format=3 uid="uid://fyda44m0gg40"]

[ext_resource type="LabelSettings" uid="uid://cbiawuv7wb0ee" path="res://_SHARED ASSETS/font/red.tres" id="2_2vp17"]
[ext_resource type="Script" uid="uid://cjwrexs5vqi4" path="res://TRON_TIM/scripts/countdown_label.gd" id="2_5xqnf"]
[ext_resource type="Script" uid="uid://3nwlx4vpui1f" path="res://TRON_TIM/scripts/level 3/ui 3.gd" id="2_sxqav"]
[ext_resource type="Script" uid="uid://dmy6mqfuo4vm7" path="res://TRON_TIM/scripts/level 3/player_level3.gd" id="3_8v4wr"]
[ext_resource type="Texture2D" uid="uid://ckwapv8jfllfq" path="res://TRON_TIM/assets/sprites/light.png" id="3_ddaqk"]
[ext_resource type="Script" uid="uid://hn3srnpbk3en" path="res://TRON_TIM/scripts/level 3/night_level3.gd" id="3_s2l8k"]
[ext_resource type="Texture2D" uid="uid://dmv8yg16x3ml1" path="res://TRON_TIM/assets/sprites/bg level 3.png" id="3_vcx5n"]
[ext_resource type="LabelSettings" uid="uid://dg7m4irgabr35" path="res://_SHARED ASSETS/font/white.tres" id="4_jeabc"]
[ext_resource type="AudioStream" uid="uid://ddhr8pu31lxwl" path="res://TRON_TIM/assets/sounds/running.mp3" id="7_ha73p"]
[ext_resource type="Texture2D" uid="uid://cw0v1pxdx47e1" path="res://TRON_TIM/assets/sprites/visioncone3.png" id="7_lkysw"]
[ext_resource type="SpriteFrames" uid="uid://c88dkas6iyipo" path="res://TRON_TIM/animations/player.tres" id="8_t1g6k"]
[ext_resource type="AudioStream" uid="uid://bmcf11s3qxjk1" path="res://TRON_TIM/assets/sounds/countdown.mp3" id="10_vcx5n"]
[ext_resource type="AudioStream" uid="uid://bhscokfl3suka" path="res://TRON_TIM/assets/sounds/reng hết giờ.mp3" id="11_56dhn"]
[ext_resource type="Script" uid="uid://vsmq2sxtutp5" path="res://TRON_TIM/scripts/level 3/lythong.gd" id="11_t1g6k"]
[ext_resource type="AudioStream" uid="uid://bhobyhawe16ud" path="res://TRON_TIM/assets/sounds/warning.mp3" id="12_ax3dk"]
[ext_resource type="Texture2D" uid="uid://dwr1byw1ylnl5" path="res://TRON_TIM/assets/sprites/lythong.png" id="12_h5r3p"]
[ext_resource type="AudioStream" uid="uid://dh5dn6x2kp06r" path="res://TRON_TIM/assets/sounds/female-laugh-149494.mp3" id="13_p3r0x"]
[ext_resource type="Script" uid="uid://byndy2ru7o2qa" path="res://TRON_TIM/scripts/level 3/vision_area_3.gd" id="14_n44gk"]
[ext_resource type="AudioStream" uid="uid://cbxd1bsrd2tm3" path="res://TRON_TIM/assets/sounds/level 3.mp3" id="15_5xqnf"]
[ext_resource type="Script" uid="uid://cdbsjin1c81dm" path="res://TRON_TIM/scripts/level 3/laugh_sound.gd" id="15_una4e"]
[ext_resource type="Texture2D" uid="uid://dh00gqj11aqi1" path="res://TRON_TIM/assets/sprites/object bg level 3.png" id="17_ema3p"]
[ext_resource type="Texture2D" uid="uid://62h7wtw5h7a2" path="res://TRON_TIM/assets/sprites/suspicious_icon.png" id="18_8uepa"]
[ext_resource type="Script" uid="uid://o2wnbq4jqpxn" path="res://MAIN/script/game_control.gd" id="20_b14vb"]
[ext_resource type="Texture2D" uid="uid://d04mex2btkvfd" path="res://MAIN/assets/ui/pause_icon.png" id="21_2vp17"]
[ext_resource type="Texture2D" uid="uid://bt527iaapnslo" path="res://MAIN/assets/ui/pause_screen_in_game.png" id="22_jeabc"]
[ext_resource type="Theme" uid="uid://ccjbl02crsn70" path="res://MAIN/assets/control_theme.tres" id="23_t1g6k"]
[ext_resource type="StyleBox" uid="uid://cjd00vb5wc7vg" path="res://MAIN/assets/control_hover.tres" id="24_h5r3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3yna"]
size = Vector2(11, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yedsq"]
size = Vector2(9, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dhu7"]
atlas = ExtResource("12_h5r3p")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8klf"]
atlas = ExtResource("12_h5r3p")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j8er"]
atlas = ExtResource("12_h5r3p")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs1bu"]
atlas = ExtResource("12_h5r3p")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqcb5"]
atlas = ExtResource("12_h5r3p")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchnv"]
atlas = ExtResource("12_h5r3p")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifrxq"]
atlas = ExtResource("12_h5r3p")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kht81"]
atlas = ExtResource("12_h5r3p")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p37vv"]
atlas = ExtResource("12_h5r3p")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65e1x"]
atlas = ExtResource("12_h5r3p")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvibm"]
atlas = ExtResource("12_h5r3p")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yra20"]
atlas = ExtResource("12_h5r3p")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0fe6"]
atlas = ExtResource("12_h5r3p")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjfl7"]
atlas = ExtResource("12_h5r3p")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc04f"]
atlas = ExtResource("12_h5r3p")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eveqv"]
atlas = ExtResource("12_h5r3p")
region = Rect2(80, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_l8klf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dhu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8klf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j8er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs1bu")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqcb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifrxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kht81")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p37vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65e1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvibm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yra20")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0fe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjfl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc04f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eveqv")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_clrtf"]
radius = 102.044

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2vp17"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_b14vb"]
light_mode = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_brbbq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8n18e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b14vb"]
size = Vector2(438.387, 20.9677)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vp17"]
size = Vector2(437.419, 22.9033)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeabc"]
size = Vector2(22.5806, 251.29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1g6k"]
size = Vector2(20, 281.452)

[node name="Node" type="Node"]

[node name="level 3" type="Node2D" parent="."]
scale = Vector2(3.1, 3.1)

[node name="UI" type="CanvasLayer" parent="level 3"]
script = ExtResource("2_sxqav")

[node name="CountdownLabel" type="Label" parent="level 3/UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_right = 3.0
offset_bottom = 64.14
grow_horizontal = 0
theme_override_colors/font_color = Color(0.92549, 0, 0.14902, 1)
theme_override_font_sizes/font_size = 30
label_settings = ExtResource("2_2vp17")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_5xqnf")
metadata/_edit_use_anchors_ = true

[node name="LevelTimerLabel" type="Label" parent="level 3/UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 86.0
label_settings = ExtResource("4_jeabc")
metadata/_edit_use_anchors_ = true

[node name="LevelTimer" type="Timer" parent="level 3/UI"]
autostart = true

[node name="StandStillLabel" type="Label" parent="level 3/UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
label_settings = ExtResource("4_jeabc")
horizontal_alignment = 2
vertical_alignment = 2

[node name="CanvasModulate" type="CanvasModulate" parent="level 3"]
z_index = 1
script = ExtResource("3_s2l8k")

[node name="Camera2D" type="Camera2D" parent="level 3"]
position = Vector2(-0.322581, 198.936)
scale = Vector2(65.6241, 65.6241)
zoom = Vector2(1.5, 1.5)

[node name="background_level3" type="Sprite2D" parent="level 3"]
z_index = -1
position = Vector2(0.444343, 204)
scale = Vector2(0.278067, 0.274885)
texture = ExtResource("3_vcx5n")

[node name="player" type="CharacterBody2D" parent="level 3"]
position = Vector2(-105, 258)
script = ExtResource("3_8v4wr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="level 3/player"]
sprite_frames = ExtResource("8_t1g6k")
animation = &"walk_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="level 3/player"]
position = Vector2(0.5, 3)
shape = SubResource("RectangleShape2D_h3yna")

[node name="PointLight2D" type="PointLight2D" parent="level 3/player"]
z_index = -1
position = Vector2(9.53674e-07, 2.99999)
scale = Vector2(0.283333, 0.275877)
texture = ExtResource("3_ddaqk")

[node name="FootstepSound" type="AudioStreamPlayer2D" parent="level 3/player"]
stream = ExtResource("7_ha73p")
volume_db = 13.333

[node name="Waypoints" type="Marker2D" parent="level 3"]
position = Vector2(121, 232)

[node name="Point1" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-274, -102)

[node name="Point2" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-148, -85)

[node name="Point3" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-21, -96)

[node name="Point4" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(46, -58)

[node name="Point5" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(31, 9)

[node name="Point6" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-48, 16)

[node name="Point7" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-190, 41)

[node name="Point8" type="Marker2D" parent="level 3/Waypoints"]
position = Vector2(-274, -13)

[node name="lythong" type="CharacterBody2D" parent="level 3" node_paths=PackedStringArray("patrol_points")]
position = Vector2(44, 244)
script = ExtResource("11_t1g6k")
patrol_points = [NodePath("../Waypoints/Point1"), NodePath("../Waypoints/Point2"), NodePath("../Waypoints/Point3"), NodePath("../Waypoints/Point4"), NodePath("../Waypoints/Point5"), NodePath("../Waypoints/Point6"), NodePath("../Waypoints/Point7"), NodePath("../Waypoints/Point8")]
player_path = NodePath("../player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="level 3/lythong"]
position = Vector2(-0.5, 2.5)
shape = SubResource("RectangleShape2D_yedsq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="level 3/lythong"]
sprite_frames = SubResource("SpriteFrames_l8klf")
animation = &"walk_right"

[node name="VisionRoot" type="Node2D" parent="level 3/lythong"]
position = Vector2(1, 0)

[node name="VisionCone" type="TextureRect" parent="level 3/lythong/VisionRoot"]
z_index = -1
offset_left = -178.0
offset_top = -181.0
offset_right = 179.0
offset_bottom = 182.0
texture = ExtResource("7_lkysw")

[node name="Area2D" type="Area2D" parent="level 3/lythong/VisionRoot/VisionCone"]
script = ExtResource("14_n44gk")
player_path = NodePath("../../../../player")

[node name="CollisionShape2D" type="CollisionShape2D" parent="level 3/lythong/VisionRoot/VisionCone/Area2D"]
position = Vector2(176, 179)
shape = SubResource("CircleShape2D_clrtf")

[node name="PointLight2D" type="PointLight2D" parent="level 3/lythong"]
position = Vector2(5.49999, -3.87107)
scale = Vector2(1.405, 1.20863)
texture = ExtResource("7_lkysw")

[node name="PointLight2D2" type="PointLight2D" parent="level 3/lythong"]
position = Vector2(-4, -1)
scale = Vector2(0.22, 0.19)
texture = ExtResource("3_ddaqk")

[node name="SuspiciousIcon" type="Sprite2D" parent="level 3/lythong"]
visible = false
material = SubResource("CanvasItemMaterial_2vp17")
position = Vector2(16, -10)
scale = Vector2(0.0273437, 0.0273437)
texture = ExtResource("18_8uepa")

[node name="Background Music" type="AudioStreamPlayer2D" parent="level 3"]
stream = ExtResource("15_5xqnf")
autoplay = true

[node name="CountDownSound" type="AudioStreamPlayer2D" parent="level 3"]
stream = ExtResource("10_vcx5n")

[node name="RengSound" type="AudioStreamPlayer2D" parent="level 3"]
stream = ExtResource("11_56dhn")

[node name="WarningSound" type="AudioStreamPlayer2D" parent="level 3"]
stream = ExtResource("12_ax3dk")

[node name="LaughSound" type="AudioStreamPlayer2D" parent="level 3"]
stream = ExtResource("13_p3r0x")
volume_db = 10.0
autoplay = true
script = ExtResource("15_una4e")

[node name="Obstacle" type="StaticBody2D" parent="level 3"]

[node name="Sprite2D" type="Sprite2D" parent="level 3/Obstacle"]
z_index = 1
position = Vector2(1.15619, 204.063)
scale = Vector2(0.27714, 0.275513)
texture = ExtResource("17_ema3p")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(155, 303, 174, 309, 172, 283, 159, 278)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(-122, 308, -117, 297, -106, 294, -94, 296, -83, 308)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(-211, 249, -184, 249, -195, 234, -216, 233)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(-184, 157, -165, 158, -168, 137, -183, 133)

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(88, 97, 113, 111, 142, 98, 130, 83, 97, 83)

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(153, 155, 186, 154, 179, 144, 152, 146)

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="level 3/Obstacle"]
polygon = PackedVector2Array(112, 308, 131, 309, 126, 302, 112, 302)

[node name="Control" type="Control" parent="level 3"]
top_level = true
z_index = 4096
material = SubResource("CanvasItemMaterial_b14vb")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -646.0
offset_top = 249.0
offset_right = -646.0
offset_bottom = 249.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.67, 0.67)
mouse_filter = 2
script = ExtResource("20_b14vb")

[node name="TextureButton" type="TextureButton" parent="level 3/Control"]
use_parent_material = true
layout_mode = 0
offset_left = 24.0
offset_top = 885.075
offset_right = 1048.0
offset_bottom = 2421.07
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("21_2vp17")
texture_pressed = ExtResource("21_2vp17")
texture_hover = ExtResource("21_2vp17")
texture_focused = ExtResource("21_2vp17")

[node name="Control" type="Control" parent="level 3/Control"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 24.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="level 3/Control/Control"]
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="level 3/Control/Control"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -768.0
offset_right = 768.0
offset_bottom = 1024.0
grow_horizontal = 2
texture = ExtResource("22_jeabc")

[node name="VBoxContainer" type="VBoxContainer" parent="level 3/Control/Control"]
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -126.0
offset_right = 230.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("23_t1g6k")
theme_override_constants/separation = 84

[node name="ResumeButton" type="Button" parent="level 3/Control/Control/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(450, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("23_t1g6k")
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_styles/hover = ExtResource("24_h5r3p")
theme_override_styles/normal = SubResource("StyleBoxEmpty_brbbq")
text = "Resume
"

[node name="QuitButton" type="Button" parent="level 3/Control/Control/VBoxContainer"]
use_parent_material = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/focus = ExtResource("24_h5r3p")
theme_override_styles/hover_pressed = ExtResource("24_h5r3p")
theme_override_styles/hover = ExtResource("24_h5r3p")
theme_override_styles/pressed = ExtResource("24_h5r3p")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8n18e")
text = "Exit Game"

[node name="WorldBounds" type="StaticBody2D" parent="level 3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level 3/WorldBounds"]
position = Vector2(5.00003, 322.097)
shape = SubResource("RectangleShape2D_b14vb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="level 3/WorldBounds"]
position = Vector2(3.54839, 60.9677)
shape = SubResource("RectangleShape2D_2vp17")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="level 3/WorldBounds"]
position = Vector2(214.516, 204.355)
shape = SubResource("RectangleShape2D_jeabc")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="level 3/WorldBounds"]
position = Vector2(-222.903, 196.855)
shape = SubResource("RectangleShape2D_t1g6k")
